--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ResultView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:textAlignment="center"
     tools:context=".MainActivity">
 
     <Button
@@ -11,60 +14,77 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="98dp"
-        android:text="Press Me"
+        android:onClick="calculate"
+        android:text="Calculate"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-65dp">
 
         <RadioGroup
             android:id="@+id/radioGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="490dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="0dp">
 
             <RadioButton
-                android:id="@+id/MassRadioButton"
+                android:id="@+id/KGTOPOUNDRadio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="87dp"
                 android:layout_marginBottom="21dp"
                 android:onClick="checkButton"
-                android:text="Mass Convertor"
-                android:textSize="22sp"
-                app:layout_constraintBottom_toTopOf="@+id/LengthRadioButton"
+                android:text="Kilo to Pound Convertor"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/POUNDTOKILORadio"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <RadioButton
-                android:id="@+id/LengthRadioButton"
+                android:id="@+id/POUNDTOKILORadio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="17dp"
                 android:onClick="checkButton"
-                android:text="Length Convertor"
-                android:textSize="22sp"
+                android:text="Pound to Kilo Convertor"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/DistanceRadioButton"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/MassRadioButton" />
+                app:layout_constraintTop_toBottomOf="@+id/KGTOPOUNDRadio" />
 
-            <RadioButton
-                android:id="@+id/DistanceRadioButton"
+            <EditText
+                android:id="@+id/InputNumberText"
+                android:layout_width="250dp"
+                android:layout_height="71dp"
+                android:layout_marginHorizontal="30pt"
+                android:ems="10"
+                android:inputType="numberDecimal"
+                android:shadowColor="#4A0000"
+                android:visibility="visible"
+                tools:ignore="SpeakableTextPresentCheck"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/ResultText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:onClick="checkButton"
-                android:text="Distance Convertor"
-                android:textSize="22sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/LengthRadioButton" />
-            />
+                android:layout_marginHorizontal="30pt"
+                android:ems="15"
+                android:text="TextView"
+                android:textSize="22sp" />
+
         </RadioGroup>
-</RelativeLayout>
-    
+
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
