--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,81 +9,99 @@
     android:textAlignment="center"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/ResultButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="98dp"
-        android:onClick="calculate"
-        android:text="Calculate"
-        android:textSize="26sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-65dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="-84dp">
 
-        <RadioGroup
-            android:id="@+id/radioGroup"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="490dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="-2dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/KGTOPOUNDRadio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="87dp"
-                android:layout_marginBottom="21dp"
-                android:onClick="checkButton"
-                android:text="Kilo to Pound Convertor"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/POUNDTOKILORadio"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_width="match_parent"
+                android:layout_height="490dp"
+                android:layout_marginEnd="-9dp">
 
-            <RadioButton
-                android:id="@+id/POUNDTOKILORadio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="17dp"
-                android:onClick="checkButton"
-                android:text="Pound to Kilo Convertor"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/DistanceRadioButton"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/KGTOPOUNDRadio" />
+                <RadioButton
+                    android:id="@+id/KGTOPOUNDRadio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="87dp"
+                    android:layout_marginBottom="21dp"
+                    android:onClick="checkButton"
+                    android:text="Kilo to Pound Convertor"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toTopOf="@+id/POUNDTOKILORadio"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/InputNumberText"
-                android:layout_width="250dp"
-                android:layout_height="71dp"
-                android:layout_marginHorizontal="30pt"
-                android:ems="10"
-                android:inputType="numberDecimal"
-                android:shadowColor="#4A0000"
-                android:visibility="visible"
-                tools:ignore="SpeakableTextPresentCheck"
-                tools:visibility="visible" />
+                <RadioButton
+                    android:id="@+id/POUNDTOKILORadio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="17dp"
+                    android:onClick="checkButton"
+                    android:text="Pound to Kilo Convertor"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toTopOf="@+id/DistanceRadioButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/KGTOPOUNDRadio" />
 
-            <TextView
-                android:id="@+id/ResultText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="30pt"
-                android:ems="15"
-                android:text="TextView"
-                android:textSize="22sp" />
+                <EditText
+                    android:id="@+id/InputNumberText"
+                    android:layout_width="250dp"
+                    android:layout_height="71dp"
+                    android:layout_marginHorizontal="30pt"
+                    android:ems="10"
+                    android:inputType="numberDecimal"
+                    android:shadowColor="#4A0000"
+                    android:visibility="visible"
+                    tools:ignore="SpeakableTextPresentCheck"
+                    tools:visibility="visible" />
 
-        </RadioGroup>
+                <TextView
+                    android:id="@+id/ResultText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="30pt"
+                    android:ems="15"
+                    android:text="TextView"
+                    android:textSize="22sp" />
+
+            </RadioGroup>
+
+            <LinearLayout
+                android:layout_marginStart="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/ResultButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="98dp"
+                    android:onClick="calculate"
+                    android:text="Calculate"
+                    android:textSize="26sp" />
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Share"
+                    android:textSize="26sp"
+                    android:layout_marginStart="20dp"
+                    />
+            </LinearLayout>
+        </LinearLayout>
 
     </RelativeLayout>
 
