--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -108,6 +108,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_weight="1"
+                        android:onClick="shareResult"
                         android:text="Share"
                         android:textSize="26sp" />
                 </LinearLayout>
