--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,19 +87,18 @@
                     android:id="@+id/ResultButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="98dp"
                     android:onClick="calculate"
                     android:text="Calculate"
-                    android:textSize="26sp" />
+                    android:textSize="20sp" />
 
                 <Button
                     android:id="@+id/button2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Share"
-                    android:textSize="26sp"
                     android:layout_marginStart="20dp"
-                    />
+                    android:onClick="shareResult"
+                    android:text="Share"
+                    android:textSize="20sp" />
             </LinearLayout>
         </LinearLayout>
 
